# monet-stats

./: .gitignore  .pre-commit-config.yaml  MONET-STATS-SPECIFICATION.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
data/: README.md  generate_example_datasets.py  precipitation_obs_mod.csv  temperature_obs_mod.csv
docs/: contributing.md  faq.md  getting-started.md  index.md  installation.md  system-integration.md
docs/api/: contingency-metrics.md  overview.md
docs/math/: overview.md
docs/notebooks/: README.md
docs/workflows/: climate-data-analysis.md
notebooks/: 01_basic_statistical_analysis.ipynb  02_model_observation_comparison.ipynb  03_spatial_analysis_downscaling.ipynb  03_spatial_analysis_downscaling_fixed.ipynb  04_ensemble_analysis_multi_model.ipynb  05_performance_optimization_large_datasets.ipynb  06_integration_examples.ipynb  README.md
scripts/: test_cicd.py
src/monet_stats/: __init__.py  benchmarks.py  contingency_metrics.py  correlation_metrics.py  data_processing.py  efficiency_metrics.py  error_metrics.py  interfaces.py  performance.py  plugin_system.py  relative_metrics.py  spatial_ensemble_metrics.py  test_aliases.py  test_utils.py  utils_stats.py
tests/: __init__.py  conftest.py  test_benchmarks.py  test_comprehensive_integration.py  test_contingency_metrics.py  test_correlation_metrics.py  test_coverage_report.py  test_edge_cases.py  test_efficiency_metrics.py  test_error_metrics.py  test_integration.py  test_performance.py  test_performance_benchmarks.py  test_property_based.py  test_regression_validation.py  test_relative_metrics.py  test_spatial_ensemble_metrics.py  test_statistical_functions.py  test_utils.py  test_utils_stats.py
