[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "monet-stats"
version = "0.0.1"
authors = [
  { name="NOAA Air Resources Laboratory", email="arl.webmaster@noaa.gov" },
]
description = "A statistics and utility library for atmospheric sciences."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "statsmodels",
    "xarray",
]

[project.urls]
"Homepage" = "https://github.com/noaa-oar-arl/monet"
"Bug Tracker" = "https://github.com/noaa-oar-arl/monet/issues"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "pytest-benchmark>=4.0",
    "pytest-xdist>=3.0",
    "hypothesis>=6.0",
]
dev = [
    "black",
    "isort",
    "ruff",
    "flake8",
    "mypy",
    "pre-commit",
    "pycodestyle",
    "safety",
    "bandit",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config --cov=src/monet_stats --cov-report=term-missing --cov-report=html:htmlcov --cov-report=xml --cov-fail-under=95"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "edge_case: marks tests as edge case tests",
    "performance: marks tests as performance benchmarks",
    "mathematical: marks tests as mathematical correctness tests",
    "xarray: marks tests that require xarray functionality",
]

[tool.coverage.run]
source = ["src/monet_stats"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.8"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
[tool.ruff]
# Enable the isort rules
select = [
    "A",    # flake8-builtins
    "B",    # flake8-bugbear
    "BLE",  # flake8-blind-except
    "C4",   # flake8-comprehensions
    "C9",   # mccabe
    "DTZ",  # flake8-datetimez
    "E",    # pycodestyle errors
    "EXE",  # flake8-executable
    "F",    # pyflakes
    "G",    # flake8-logging-format
    "I",    # isort
    "ICN",  # flake8-import-conventions
    "ISC",  # flake8-implicit-str-concat
    "N",    # pep8-naming
    "PGH",  # pygrep-hooks
    "PIE",  # flake8-pie
    "PL",   # pylint
    "PT",   # flake8-pytest-style
    "PYI",  # flake8-pyi
    "RUF",  # ruff-specific rules
    "S",    # flake8-bandit
    "SIM",  # flake8-simplify
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
    "YTT",  # flake8-2020
    "ANN",  # flake8-annotations (disabled for now)
]
ignore = [
    "PLR",  # Design related pylint codes
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C4", "C9", "DTZ", "E", "EXE", "F", "G", "I", "ICN", "ISC", "N", "PGH", "PIE", "PL", "PT", "PYI", "RUF", "S", "SIM", "UP", "W", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

line-length = 88
indent-width = 4

[tool.ruff.per-file-ignores]
# Allow missing docstrings for tests
"tests/*" = ["D100", "D101", "D102", "D103", "D104", "S101"]

[tool.ruff.isort]
known-first-party = ["monet_stats"]
known-third-party = ["numpy", "pandas", "scipy", "statsmodels", "xarray", "pytest", "hypothesis"]

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
